--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@tanstack/vue-query": "^5.52.0",
+    "@tanstack/vue-query-devtools": "^5.53.1",
     "@types/lodash": "^4.17.7",
     "ant-design-vue": "^4.2.3",
     "axios": "^1.7.5",
