Config DB generate / add dropdown user login

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.threads.virtual.enabled=true
 spring.web.resources.cache.cachecontrol.must-revalidate=true
 server.port=${SERVER_PORT:1828}
 spring.banner.location=banner/banner.txt
+db.generator.is-generated=${GENERATE_DB:false}
 # TOMCAT CONFIGURATION
 server.tomcat.threads.max=400
 server.tomcat.threads.min-spare=20
