--- a/server/build.gradle
+++ b/server/build.gradle
@@ -21,7 +21,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-oauth2-client'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -30,14 +35,6 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'me.paulschwarz:spring-dotenv:4.0.0'
-    implementation 'org.webjars:webjars-locator-core:0.55'
-    runtimeOnly 'org.webjars:jquery:3.7.1'
-    runtimeOnly 'org.webjars:bootstrap:5.3.3'
-    runtimeOnly 'org.webjars:font-awesome:6.5.2'
-    runtimeOnly 'org.webjars:popper.js:2.11.7'
-    runtimeOnly 'org.webjars.npm:toastify-js:1.12.0'
-    runtimeOnly 'org.webjars:js-cookie:3.0.1'
-    runtimeOnly 'org.webjars:select2:4.0.13'
 
     implementation 'org.apache.poi:poi:3.17'
     implementation 'org.apache.poi:poi-ooxml:3.17'
