--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,6 @@
+#SERVER INFORMATION
+SERVER_VERSION=1.0.0
+
 #DATABASE INFORMATION
 MYSQL_HOST=
 MYSQL_PORT=
@@ -7,7 +10,11 @@ MYSQL_PASSWORD=
 JPA_SHOW_SQL=
 JPA_DDL_AUTO=
 GENERATE_DB=
+
+#FRONTEND INFORMATION
 FRONTEND_URL=
+
+#AUTHENTICATION INFORMATION
 JWT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
