--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.threads.virtual.enabled=true
 server.port=${SERVER_PORT:1828}
 spring.banner.location=banner/banner.txt
 db.generator.is-generated=${GENERATE_DB:false}
+server.version=${SERVER_VERSION:1.0.0}
 #FRONTEND INFORMATION
 frontend.url=${FRONTEND_URL:http://localhost:1234}
 # TOMCAT CONFIGURATION
