--- a/server/build.gradle
+++ b/server/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'org.springframework.batch:spring-batch-core:5.0.3'
     implementation 'com.github.kumarpankaj18:spring-batch-excel:1.0.6'
     implementation 'org.json:json:20231013'
+    implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.5'
 }
 
 tasks.named('test') {
