Config docker compose for development service

--- a/server/.env.example
+++ b/server/.env.example
@@ -18,3 +18,14 @@ FRONTEND_URL=
 JWT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+#ENVIRONMENT FOR IDENTITY SERVICE
+DATABASE_HOSTNAME=identity_db
+DATABASE_USERNAME=sa
+DATABASE_PASSWORD=
+DATABASE_DDL_AUTO=update
+GENERATE_DEFAULT_DATA=true
+INIT_USER_EMAIL_PREFIX=hieunmph42056
+INIT_USER_CODE=hieunmph42056
+INIT_USER_FULL_NAME=NMH
+TZ=Asia/Ho_Chi_Minh
