--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.banner.location=banner/banner.txt
 db.generator.is-generated=${GENERATE_DB:false}
 security.use-identity=${USE_IDENTITY:false}
 server.version=${SERVER_VERSION:1.0.0}
+spring.docker.compose.file=.docker/compose.yaml
 #FRONTEND INFORMATION
 frontend.url=${FRONTEND_URL:http://localhost:1234}
 # TOMCAT CONFIGURATION
