--- a/server/build.gradle
+++ b/server/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.github.kumarpankaj18:spring-batch-excel:1.0.6'
     implementation 'org.json:json:20231013'
     implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.5'
+    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.1'
 }
 
 tasks.named('test') {
