[FE/BE] planner render google form

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -54,3 +54,5 @@ identity.client-secret=${IDENTITY_CLIENT_SECRET:rKFEVZaH+KAUSbnsxiRfFe8VEnMez8Bi
 ws.applicationPrefix=/app
 ws.topicPrefix=/topic/notifications
 ws.registerEndpoint=/ws
+#GOOGLE APP SCRIPT
+google.app-script=https://script.google.com/macros/s/AKfycbxoifpI7dC5GnxBuYFgrL61n00qCsd_EJLJTqoTwLNzemsk_sC0hSqwg2zsT7ZGHBZYqA/exec
