--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/vue-query": "^5.52.0",
     "@tanstack/vue-query-devtools": "^5.53.1",
     "@types/lodash": "^4.17.7",
     "ant-design-vue": "^4.2.3",
     "axios": "^1.7.5",
     "dayjs": "^1.11.13",
+    "global": "^4.4.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.2.2",
+    "sockjs-client": "^1.6.1",
     "tailwind-merge": "^2.5.2",
     "vue": "^3.4.37",
     "vue-resizable": "^2.1.7",
