[FE/BE] refactor import staff job / fix css layout frontend

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,8 +24,9 @@ spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.batch_versioned_data=true
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.properties.hibernate.format_sql=true
-# Config Batch Processing
-excel.file.to.database.job.cron=0/30 * * * * ?
+# Job scheduling configuration
+job.delay=${JOB_DELAY:0}
+job.period=${JOB_PERIOD:1}
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
 #FILE UPLOAD INFORMATION
