--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
+    "sass-embedded": "^1.79.5",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
