--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,4 @@
 VITE_BASE_URL_CLIENT=/
 VITE_BASE_URL_SERVER=http://localhost:1828
 VITE_BASE_URL_CLIENT=http://localhost:1234
+VITE_BASE_URL_CLIENT_SOCKET=localhost:1828
