--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "build:local": "tsc -b && vite build --mode local",
+    "build:dev": "tsc -b && vite build --mode development",
+    "build:stage": "tsc -b && vite build --mode stage",
     "preview": "vite preview"
   },
   "dependencies": {
