--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "tailwind-merge": "^2.5.2",
     "vue": "^3.4.37",
     "vue-resizable": "^2.1.7",
+    "vue-resize": "^1.0.1",
     "vue-router": "^4.4.3",
     "vue3-toastify": "^0.2.2"
   },
