[FE/BE]teacher-evident

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -57,3 +57,10 @@ ws.topicPrefix=/topic/notifications
 ws.registerEndpoint=/ws
 #GOOGLE APP SCRIPT
 google.app-script=https://script.google.com/macros/s/AKfycbxoifpI7dC5GnxBuYFgrL61n00qCsd_EJLJTqoTwLNzemsk_sC0hSqwg2zsT7ZGHBZYqA/exec
+#GOOGLE DRIVE INFORMATION
+google.drive.email=${GOOGLE_DRIVE_EMAIL:tutorgoogledriveupload@valid-sol-439209-e2.iam.gserviceaccount.com}
+google.drive.key=${GOOGLE_DRIVE_KEY:src/main/resources/tutor-key-google-api.p12}
+google.drive.parent.folder.id=${GOOGLE_DRIVE_PARENT_FOLDER_ID:109JmqdWNYJf4Jpi6F2PhqLz6zWL-bkvG}
+google.drive.share.email.default=${GOOGLE_DRIVE_SHARE_EMAIL_DEFAULT:tutormanagerment@gmail.com}
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
