--- a/server/build.gradle
+++ b/server/build.gradle
@@ -64,6 +64,12 @@ dependencies {
 
     // Spring WebFlux
     implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.5'
+
+    // google api
+    implementation 'com.google.api-client:google-api-client:2.0.1'
+    implementation 'com.google.api-client:google-api-client-jackson2:1.20.0'
+    implementation 'com.google.apis:google-api-services-drive:v3-rev20221023-2.0.0'
+
 }
 
 tasks.named('test') {
