--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -41,8 +41,8 @@ spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/oauth2/
 #Config Email sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tutormanagerment@gmail.com
-spring.mail.password=grgkfsrkhhzfsfzv
+spring.mail.username=${GOOGLE_EMAIL:tutormanagerment@gmail.com}
+spring.mail.password=${GOOGLE-APP_PASSWORD:timqoiznkhmdzjao}
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
